# pure-data

ceammc/ext/src/: CMakeLists.txt  mod_init.cpp
ceammc/ext/src/hw/: CMakeLists.txt  firmata_bison.h  firmata_bison.tab.c  firmata_bison.y  firmata_lemon.c  firmata_lemon.h  firmata_lemon.out  firmata_lemon.y  firmata_lexer.cpp  firmata_lexer.h  firmata_parser.cpp  firmata_parser.h  firmata_proto.h  firmata_server.cpp  firmata_server.h  hw_firmata.cpp  hw_firmata.h  mod_hw.cpp
ceammc/ext/tests/: CMakeLists.txt  test_firmata_parser.cpp  test_serialport.cpp
ceammc/extra/: CMakeLists.txt
ceammc/extra/arduino/: CMakeLists.txt  firmata.cpp  firmata.h
ceammc/extra/arduino/firmata/: CMakeLists.txt  firmata.ksy
ceammc/extra/libserialport/: CMakeLists.txt  config.h.in  libserialport.h.in  linux.c  linux_termios.c  macosx.c  serialport.c  serialport.cpp  serialport.h  windows.c
ceammc/extra/serial/: CMakeLists.txt
